--- a/views/header.ejs
+++ b/views/header.ejs
@@ -6,7 +6,7 @@
 	<!--<meta name="viewport" content="width=device-width, inicial-scale=1">-->
 	<link rel="stylesheet" type="text/css" href="/css/responsimple.min.css">
 	<link rel="stylesheet" type="text/css" href="/css/style.css">
-	<title><%= title %></title>
+	<title></title>
 </head>
 <body>
 
