--- a/views/index.html
+++ b/views/index.html
@@ -1,15 +1,25 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<!--<meta name="viewport" content="width=device-width, inicial-scale=1">-->
 	<link rel="stylesheet" type="text/css" href="./css/responsimple.min.css">
 	<link rel="stylesheet" type="text/css" href="../public/css/style.css">
-	<script src="../public/js/common.js" type="text/javascript" charset="utf-8"></script>
-	<title><%= title %></title>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script src="/js/scripts.js" type="text/javascript" charset="utf-8"></script>
+	<script src="/js/func_async.js" type="text/javascript" charset="utf-8"></script>
+	<title>
+
+	</title>
 </head>
+
 <body>
 	<h1>aaaa</h1>
+	<form id="frmCuerpo" action="./tdc" method="post">
+		<input type="button" value="ejecutar">
+	</form>
 </body>
+
 </html>
