--- a/views/index.html
+++ b/views/index.html
@@ -18,7 +18,7 @@
 <body>
 	<h1>aaaa</h1>
 	<form id="frmCuerpo" action="./tdc" method="post">
-		<input type="button" value="ejecutar">
+		<input type="submit" value="ejecutar">
 	</form>
 </body>
 
