--- a/views/index.html
+++ b/views/index.html
@@ -20,6 +20,7 @@
 	<form id="frmCuerpo" action="./tdc" method="post">
 		<input type="submit" value="ejecutar">
 	</form>
+	<div id="resultado"></div>
 </body>
 
 </html>
