--- a/views/index.html
+++ b/views/index.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+	<div id="error"></div>
 	<h1>aaaa</h1>
 	<form id="frmCuerpo" action="./tdc" method="post">
 		<input type="submit" value="ejecutar">
