mvc socketio window

--- a/views/index.html
+++ b/views/index.html
@@ -20,7 +20,7 @@
 	<div id="error"></div>
 	<h1>aaaa</h1>
 	<form id="frmCuerpo" action="./tdc" method="post">
-		<input type="submit" value="ejecutar">
+		<input id="btnEnviar" type="submit" value="ejecutar">
 	</form>
 	<div id="resultado"></div>
 </body>
