--- a/views/index.html
+++ b/views/index.html
@@ -41,6 +41,19 @@
         </thead>
 
 	</table>
+
+
+	<table id="example" class="display nowrap" cellspacing="0" width="100%">
+        <thead>
+            <tr>
+                <th>ID</th>
+                <th>First name</th>
+                <th>Last name</th>
+                <th>ZIP / Post code</th>
+                <th>Country</th>
+            </tr>
+        </thead>
+    </table>
 </body>
 
 </html>
