--- a/views/index.html
+++ b/views/index.html
@@ -27,7 +27,7 @@
 	<form id="frmCuerpo" action="./tdc" method="post">
 		<input id="btnEnviar" type="submit" value="ejecutar">
 	</form>
-	<div id="resultado"></div>
+	<div id="info"></div>
 	<table id="tabla" class="display" cellspacing="0" width="100%">
 		<thead>
             <tr>
